Issue #9293: I/O streams now raise `io.UnsupportedOperation` when an unsupported operation is attempted (for example, writing to a file open only for reading).